Recent commit of my html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
         <div class="col-sm-4 col-md-4 col-lg-4">
             <div class="box-part text-center">
-                <i class="fa fa-pinterest fa-3x" ></i>
-                <h4>Pinterest</h4>
+                <i class="fa fa-opera fa-3x" ></i>
+                <h4>Opera</h4>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</p>
                 </div>
@@ -67,8 +67,8 @@
         </div>
         <div class="col-sm-4 col-md-4 col-lg-4">
             <div class="box-part text-center">
-                <i class="fa fa-github fa-3x" ></i>
-                <h4>Github</h4>
+                <i class="fa fa-yahoo fa-3x" ></i>
+                <h4>Yahoo</h4>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, id quo eruditi eloquentiam. Assum decore te sed. Elitr scripta ocurreret qui ad.</p>
                 </div>
